--- a/base/frontend.yaml
+++ b/base/frontend.yaml
@@ -20,6 +20,9 @@ spec:
           ports:
             # 컨테이너 포트 설정
             - containerPort: 3000
+          envFrom:
+           - configMapRef:
+               name: configmap
 ---
 apiVersion: v1
 kind: Service
