--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -9,6 +9,14 @@ resources:
 labels:
 patches:
 - target:
+    kind: Deployment
+    name: fe-deployment
+  path: env.json
+- target:
+    kind: Deployment
+    name: be-deployment
+  path: env.json
+- target:
     kind: Ingress
     name: fe-ingress
   path: domain.json
